# KindlyKlanKlient

./: .gitignore  index.html  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.tsx  globals.css  main.tsx  minecraft-skinviewer.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: admins.rs  auth_ms.rs  commands.rs  discord_rpc.rs  http_client.rs  instances.rs  launcher.rs  lib.rs  local_instances.rs  logging.rs  main.rs  models.rs  modrinth.rs  sessions.rs  sessions_api.rs  utils.rs  versions.rs  whitelist.rs
src-tauri/wix/: main.wxs
src/components/: AllInstancesModal.tsx  Avatar.tsx  CopyFoldersModal.tsx  CreateLocalInstanceModal.tsx  DownloadProgressToast.tsx  InstanceView.tsx  LaunchButton.tsx  Loader.tsx  LocalInstancesView.tsx  ModrinthSearchModal.tsx  NoAccessScreen.tsx  SettingsPanel.tsx  SettingsView.tsx  Sidebar.tsx  Toast.tsx  ToastContainer.tsx  UpdateReadyToast.tsx  UserProfile.tsx
src/components/skin/: SkinManager.tsx  SkinPreview.tsx  SkinPreview3D.tsx  SkinUploader.tsx
src/components/ui/: Tooltip.tsx  badge.tsx  button.tsx  progress.tsx
src/services/: admins.ts  avatarService.ts  sessions.ts  updater.ts  whitelist.ts
src/services/skin/: mineSkinApi.ts  skinStorage.ts
src/types/: local-instances.ts  skin.ts  updater.ts  whitelist.ts
src/utils/: appToast.ts  logger.ts  modLoaderIcon.ts  notifications.ts  progressBar.ts
