[package]
name = "kindlyklanklient"
version = "0.1.85"
description = "Client for Kindly Klan's events."
authors = ["Kindly Klan"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kindlyklanklient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2.5"
tauri-plugin-oauth = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros", "time"] }
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
futures-util = "0.3"
url = "2.4"
open = "5.0"
tauri-plugin-prevent-default = "3.0.3"
tauri-plugin-updater = "2.0"
zip = "0.6"
sha2 = "0.10"
md5 = "0.7"
walkdir = "2.5"
num_cpus = "1.16"
winapi = "0.3.9"
sysinfo = "0.30"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-notification = "2.0"
tauri-plugin-global-shortcut = "2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"
glob = "0.3"
dunce = "1.0"
urlencoding = "2.1"

